[package]
name = "image_processor"
version = "1.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.14"
async-fs = "1.5.0"
webp = "0.1.3"
image = "0.23.14"
once_cell = "1.7.2"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
futures-lite = "1.12.0"
serde_json = "1.0.64"
infer = "0.5.0"
base64 = "0.13.0"

[dependencies.snowflake]
git = "https://github.com/JKShop/snowflake.git"

[dependencies.actix-web]
version = "3"
features = ["rustls"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]


[dependencies.paperclip]
version = "0.5.0"
features = ["actix-nightly"]